2007-01-21  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* src/interface.c, src/interface.h, src/callback.c: Change the way
	about dialog is shown. Fixes bug #1556427.

2007-01-17  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* src/gui-editor.h, src/gui-editor.c: Add scroll window and make it
	parent of text widget, add method to set font, default to "Monospace
	12"
	* src/gui-app.c, src/callbacks.c: Pack scroll window instead of text
	widget

2007-01-14  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* debian/: Files needed for creating debian packages
	* configure.in, configure, Makefile.am, Makefile.in, data/: Install
	.lang file in ${prefix}/share/gtksourceview-1.0/language-specs
	directory, add it to package distribution
	* po/: gettext domain name is changed, so .pot file is updated
	* License.txt: Deleted as GNUSim8085 doesn't use scintilla anymore

2007-01-07  Aanjhan Ranganathan <aanjhan@users.sourceforge.net>
	* auto-tools: Moved to Auto make 1.9
	* Makefile.am: Will automaticaly copy the .lang file to the /usr/share
	/gtksourceview-1.0/language-specs directory

2007-01-04  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* src/gui-editor.h, src/gui-editor.c: Syntax highlighting code
	* data/8085asm.lang: Language specification file to use with
	gtksourceview
	* GNUSim8085.desktop.in: Revert last change which caused icon not to
	show in menu entry

2006-12-31  Onkar Shinde  <onkarshinde@users.sourceforge.net>
	* src/gui-editor.h, src/gui-editor.c: Replaced scintilla widget with
	gtksourceview widget, basic editing is working
	* src/: Removed scintilla source files
	* src/Makefile.am, po/POTFILES.in: Remove scintilla source file names
	* configure.in: Updated version, added check for gtksourceview,
	changed doc directory path
	* configure: Updated by autoconf
	* config.h.in: Automatically updated
	* Makefile.am: Changed doc directory path, updated doc file list
	* Makefile.in, src/Makefile.in, pixmaps/Makefile.in, doc/Makefile.in,