@@ -136,8 +136,8 @@ hightlight_line (gint ln)
 
 	if (ln != -1)
 	{
-		gui_editor_set_highlight (app->editor, ln, TRUE);
 		gui_editor_goto_line (app->editor, ln);
+		gui_editor_set_highlight (app->editor, TRUE);
 	}
 }
 
@@ -174,6 +174,7 @@ _bridge_8085_cb (eef_addr_t addr, eef_addr_t prev_addr, gboolean finished)
 		saved_and_assembled_successfully = FALSE;
 		bridge_debug_this_line (0, -1);
 		gui_editor_set_readonly (app->editor, FALSE);
+		gui_editor_set_highlight (app->editor, FALSE);
 		//gnome_appbar_pop (appbar);
 		_end_of_exec ();
 		return TRUE;	/* caller is going to return */
@@ -326,6 +327,7 @@ b_execute (void)
 		state = B_STATE_IDLE;
 		execution_single_stepped = FALSE;
 		gui_editor_set_readonly (app->editor, TRUE);
+		gui_editor_set_highlight (app->editor, TRUE);
 		return eef_execute_from (about_to_execute_from,
 					 &executed_bytes, -1);
 	}
@@ -365,6 +367,7 @@ b_resume_execution (BTraceMode tmode)
 		ess_trace_mode = tmode;
 
 		gui_editor_set_readonly (app->editor, TRUE);
+		gui_editor_set_highlight (app->editor, TRUE);
 		bridge_debug_this_line (about_to_execute_from,
 					eef_link_get_line_no
 					(about_to_execute_from));
@@ -414,6 +417,7 @@ b_debug_stop (void)
 	//gnome_appbar_pop (appbar);
 	_end_of_exec ();
 	gui_editor_set_readonly (app->editor, FALSE);
+	gui_editor_set_highlight (app->editor, FALSE);
 }
 
 /* toggles at current line number */
